docs/sf-export/sfdx-raw/objects/ChecklistConfig__mdt/ChecklistConfig__mdt.object-meta.xml
<CustomObject>
    <label>Checklist Config</label>
    <pluralLabel>Checklist Config</pluralLabel>
</CustomObject>