docs/sf-export/sfdx-raw/objects/ChecklistConfig__mdt/fields/Account_Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Member_Role__c</fullName>
    <label>Account Team Member Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Services Manager</fullName>
            </value>
            <value>
                <fullName>Customer Services Rep</fullName>
                <default>true</default>
                <label>Customer Services Rep</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>