docs/sf-export/sfdx-raw/objects/ChecklistConfig__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Services</fullName>
                <default>true</default>
                <label>Customer Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>