docs/sf-export/sfdx-raw/objects/ChecklistConfig__mdt/fields/Checklist_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Name__c</fullName>
    <label>Checklist Item Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>