docs/sf-export/sfdx-raw/objects/ChecklistConfig__mdt/fields/Due_Date_Period__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Period__c</fullName>
    <description>If the Due Date Period is X, Today() + X will be populated in the checklist items</description>
    <label>Due Date Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>