docs/sf-export/sfdx-raw/objects/ChecklistConfig__mdt/fields/Owner_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Assignment_Type__c</fullName>
    <label>Owner Assignment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Team Member Role</fullName>
                <default>true</default>
                <label>Account Team Member Role</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>