docs/sf-export/sfdx-raw/objects/ChecklistConfig__mdt/listViews/CheckList.listView-meta.xml
<ListView>
    <fullName>CheckList</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Account_Team_Member_Role__c</columns>
    <columns>Category__c</columns>
    <columns>Checklist_Item_Name__c</columns>
    <columns>Checklist_Name__c</columns>
    <columns>Owner_Assignment_Type__c</columns>
    <columns>Due_Date_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>CheckList</label>
</ListView>